@@ -374,8 +374,11 @@ static bool c_ast_check_builtin( c_ast_t const *ast ) {
       print_error( &ast->loc, "scoped names can not have bit-field widths\n" );
       return false;
     }
-    if ( c_type_is_tid_any( &ast->type, TS_TYPEDEF ) ) {
-      print_error( &ast->loc, "types can not have bit-field widths\n" );
+    if ( c_type_is_tid_any( &ast->type, TS_ANY ) ) {
+      print_error( &ast->loc,
+        "%s can not have bit-field widths\n",
+        c_type_id_name_error( ast->type.store_tid )
+      );
       return false;
     }
   }
